--- a/index-try.html
+++ b/index-try.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+<!DOCTYPE html>Person
 <html lang="en">
 <head>
-<title>W3.CSS Template</title>
+<title>CMPS Missing Person Bulletin design</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -25,14 +25,14 @@ body {font-size:16px;}
 <nav class="w3-sidebar sammac w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
   <div class="w3-container">
-    <h3 class="w3-padding-64"><b>Company<br>Name</b></h3>
+    <h3 class="w3-padding-64"><b>Camalig<br>MPS</b></h3>
   </div>
   <div class="w3-bar-block">
     <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
-    <a href="#showcase" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Showcase</a> 
-    <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Services</a> 
-    <a href="#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Designers</a> 
-    <a href="#packages" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Packages</a> 
+    <a href="#personnel" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Personnel</a> 
+    <a href="#system-design" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">System Design</a> 
+    <a href="#system-manual" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">System Manual</a> 
+    <a href="#missing-person-bulletin" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Missing Person Bulletin</a> 
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
   </div>
 </nav>
@@ -50,25 +50,47 @@ body {font-size:16px;}
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
 
   <!-- Header -->
-  <div class="w3-container" style="margin-top:80px" id="showcase">
-    <h1 class="w3-jumbo"><b>CMPS</b></h1>
-    <h1 class="w3-xxxlarge w3-text-red"><b>Missing Person Management System</b></h1>
+  <div class="w3-container" style="margin-top:80px" id="personnel">
+    <h1 class="w3-jumbo"><b>Camalig Municipal Police Station</b></h1>
+    <h1 class="w3-xxxlarge w3-text-red"><b>Personnel</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
   </div>
   
   <!-- Photo grid (modal) -->
   <div class="container">
-    <h2>Carousel Example</h2>  
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+        <li data-target="#myCarousel" data-slide-to="4"></li>
       </ol>
   
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
+        <div class="item active">
+          <img src="images/showcase/1.jpg" alt="Los Angeles" style="width:100%; height: 700px;">
+        </div>
+  
+        <div class="item">
+          <img src="images/showcase/2.jpeg" alt="Chicago" style="width:100%; height: 700px;">
+        </div>
+      
+        <div class="item">
+          <img src="images/showcase/3.jpg" alt="New york" style="width:100%; height: 700px;">
+        </div>
+
+        <div class="item">
+          <img src="images/showcase/4.jpg" alt="New york" style="width:100%; height: 700px;">
+        </div>
+
+        <div class="item">
+            <img src="images/showcase/6.jpg" alt="New york" style="width:100%; height: 700px;">
+        </div>
+      </div>
+      <!-- <div class="carousel-inner">
         <div class="item active">
           <img src="images/display/dashboard.PNG" alt="Los Angeles" style="width:100%;">
         </div>
@@ -84,7 +106,7 @@ body {font-size:16px;}
         <div class="item">
           <img src="images/display/notif.PNG" alt="New york" style="width:100%;">
         </div>
-      </div>
+      </div> -->
   
       <!-- Left and right controls -->
       <a class="left carousel-control" href="#myCarousel" data-slide="prev">
@@ -107,27 +129,27 @@ body {font-size:16px;}
     </div>
   </div>
 
-  <!-- Services -->
-  <div class="w3-container" id="services" style="margin-top:75px">
-    <h1 class="w3-xxxlarge w3-text-red"><b>Services.</b></h1>
+  <!-- System Design -->
+  <div class="w3-container" id="system-design" style="margin-top:75px">
+    <h1 class="w3-xxxlarge w3-text-red"><b>System Design</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <p>We are a interior design service that focus on what's best for your home and what's best for you!</p>
-    <p>Some text about our services - what we do and what we offer. We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+    <p>Some text about our design - what we do and what we offer. We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
     dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
     </p>
   </div>
   
-  <!-- Designers -->
-  <div class="w3-container" id="designers" style="margin-top:75px">
-    <h1 class="w3-xxxlarge w3-text-red"><b>Designers.</b></h1>
+  <!-- System Manual -->
+  <div class="w3-container" id="system-manual" style="margin-top:75px">
+    <h1 class="w3-xxxlarge w3-text-red"><b>System Manual</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <p>The best team in the world.</p>
     <p>We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
     dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
     incididunt ut labore et quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
     </p>
-    <p><b>Our designers are thoughtfully chosen</b>:</p>
+    <p><b>Our system-manual are thoughtfully chosen</b>:</p>
   </div>
 
   <!-- The Team -->
@@ -164,9 +186,9 @@ body {font-size:16px;}
     </div>
   </div>
 
-  <!-- Packages / Pricing Tables -->
-  <div class="w3-container" id="packages" style="margin-top:75px">
-    <h1 class="w3-xxxlarge w3-text-red"><b>Packages.</b></h1>
+  <!-- missing-person-bulletin / Pricing Tables -->
+  <div class="w3-container" id="missing-person-bulletin" style="margin-top:75px">
+    <h1 class="w3-xxxlarge w3-text-red"><b>Missing Person Bulletin.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <p>Some text our prices. Lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
   </div>
